👌(layout) fix accordion border line
Accordion left border which make the path between item dots was
ending too far compared to mockup. This was due to CSS techniques
and HTML structure.

This commit just fix this with additional line in accordion
Javascript code to add an attribute on item so we can match
something in CSS and avoid border line to continue after the dot
when not opened. Also this adjust some margin on checkmark list from
previous commit 5d3b383.

--- a/src/frontend/scss/components/templates/richie/nesteditem/_nesteditem.scss
+++ b/src/frontend/scss/components/templates/richie/nesteditem/_nesteditem.scss
@@ -48,7 +48,7 @@
   // is always a list
   //
   &--accordion {
-    $accordion-background-color: r-theme-val(accordion-plan, border-color);
+    $accordion-border-color: r-theme-val(accordion-plan, border-color);
     $accordion-border-size: rem-calc(2px);
 
     @include sv-flex(1, 0, 100%);
@@ -101,7 +101,7 @@
         left: 1rem;
         bottom: 1.75rem;
         width: $accordion-border-size;
-        border-left: $accordion-border-size solid $accordion-background-color;
+        border-left: $accordion-border-size solid $accordion-border-color;
       }
 
       & > li {
@@ -109,21 +109,21 @@
         position: relative;
         list-style-type: none;
 
-        @if $accordion-background-color {
-          &:last-child {
-            // Trick to mask border, this would work only with current
-            // accordion background and never with on top of composite
-            // backgrounds like image or gradients
-            &::before {
-              content: '';
-              position: absolute;
-              top: 1.25rem;
-              left: -1.5rem;
-              bottom: 0;
-              width: $accordion-border-size;
-              border-left: $accordion-border-size
-                solid
-                $accordion-background-color;
+        @if $accordion-border-color {
+          &[data-accordion-active] {
+            &:last-child {
+              // Trick to continue border
+              &::before {
+                content: '';
+                position: absolute;
+                top: 1.25rem;
+                left: -1.5rem;
+                bottom: 0;
+                width: $accordion-border-size;
+                border-left: $accordion-border-size
+                  solid
+                  $accordion-border-color;
+              }
             }
           }
         }
